Package restructure completed